syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.hjforever.grpc.user";
option java_outer_classname = "UserProto";
option objc_class_prefix = "USER";

package user;

// The user service definition.
service User {

    //双向流 （流是可以多次）
    rpc QueryUserByName (stream UserRequest) returns (stream UserReply) {};

    // 服务端 to 客户端  ， 服务端接收客户端UserRequest请求 返回 UserReply 流 （多次）
    rpc QueryUserByIds (UserRequest) returns (stream UserReply) {};

    // 客户端 to 服务端 流 ，客户端发送 UserRequest 流 （多次），服务端接收后返回 UserReply
    rpc QueryLastUsers (stream UserRequest) returns (UserReply) {};

}

message UserRequest {
    string name = 1;
    int64 userId = 2;
}

message UserReply {
    int64 userId = 1;
    string name = 2;
    int32 age = 3;
}